# OpenTradingPlatformPythonClient

./: README.md  pyproject.toml
docs/: getting_started.md
examples/: simple_data_get.py  simple_data_get_with_continuous_update_from_stream.py  simple_data_get_with_continuous_update_from_stream_delayed.py  simple_sentiment_analysis.py  simple_stream_subscribe_callback.py  simple_stream_subscribe_queue.py
otpclient/client/: client.py  dataprovider_client.py  datastorage_client.py  defaults.py  enums.py  exception.py  response.py  sentimentanalyzer_client.py  system_client.py  user_client.py
otpclient/client/request/: data_request.py  request.py  sentimentanalysis_request.py  stream_request.py
otpclient/client/response/: response.py
otpclient/client/stream_handler/: entity_mapping.py  subscription_potential.py
otpclient/logging/: logger.py
otpclient/proto/: Base.py  LULD_pb2.py  bar.py  bar_pb2.py  luld.py  news.py  news_pb2.py  orderbook.py  orderbook_pb2.py  proto_loadable.py  quote.py  quote_pb2.py  trade.py  trade_pb2.py  tradingstatus.py  tradingstatus_pb2.py  transmission_message.py  transmission_message_pb2.py
